--- a/app/src/main/res/layout/item_tab1.xml
+++ b/app/src/main/res/layout/item_tab1.xml
@@ -84,6 +84,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/tab1_item_talkimg"
                 android:adjustViewBounds="true"
                 android:layout_width="wrap_content"
@@ -98,6 +99,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tab1_item_data"
                 android:layout_margin="10dp"
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -130,6 +132,7 @@
                     android:src="@drawable/icon_like"/>
 
                 <TextView
+                    android:id="@+id/tab1_item_likecount"
                     android:paddingTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
@@ -156,6 +159,7 @@
                     android:src="@drawable/icon_ment"/>
 
                 <TextView
+                    android:id="@+id/tab1_item_mentcount"
                     android:paddingTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
@@ -183,6 +187,7 @@
                     android:id="@+id/imageView2" />
 
                 <TextView
+                    android:id="@+id/tab1_item_loationstate"
                     android:paddingTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
@@ -191,8 +196,7 @@
                     android:text="공개"
                     android:textStyle="italic"
                    android:textSize="20dp"
-                    android:textColor="#777777"
-                    android:id="@+id/textView" />
+                    android:textColor="#777777"/>
 
             </LinearLayout>
 
