--- a/app/src/main/res/layout/item_tab1.xml
+++ b/app/src/main/res/layout/item_tab1.xml
@@ -63,6 +63,7 @@
                     android:background="@drawable/btn_grayround">
 
                     <TextView
+                        android:layout_marginRight="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -187,11 +188,12 @@
                     android:id="@+id/imageView2" />
 
                 <TextView
+                    android:layout_marginRight="5dp"
                     android:id="@+id/tab1_item_loationstate"
                     android:paddingTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
-                    android:layout_width="50dp"
+                    android:layout_width="55dp"
                     android:layout_height="match_parent"
                     android:text="공개"
                     android:textStyle="italic"
