--- a/app/src/main/res/layout/item_tab1.xml
+++ b/app/src/main/res/layout/item_tab1.xml
@@ -56,7 +56,8 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:onClick="tab1_item_delete"
+                    android:id="@+id/tab1_item_delete"
+                    android:visibility="visible"
                     android:gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="20dp"
@@ -85,12 +86,10 @@
             android:orientation="vertical">
 
             <ImageView
-                android:visibility="gone"
                 android:id="@+id/tab1_item_talkimg"
                 android:adjustViewBounds="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/testimg3"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
