--- a/app/src/main/res/layout/item_tab1.xml
+++ b/app/src/main/res/layout/item_tab1.xml
@@ -13,14 +13,14 @@
         <LinearLayout
             android:padding="15dp"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:gravity="center|left"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/tab1_item_prfileimg"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@color/colorSora"/>
 
 
@@ -38,13 +38,14 @@
                     android:text="닉네임"
                     android:textColor="#000000"
                     android:textStyle="bold|italic"
-                    android:textSize="20dp"/>
+                    android:textSize="17dp"/>
 
                 <TextView
                     android:id="@+id/tab1_item_date"
                     android:layout_marginTop="2dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="12dp"
                     android:text="2017.03.22 13:00"
                     android:textColor="#6a6a6a"/>
 
@@ -106,20 +107,19 @@
                 android:layout_height="wrap_content"
                 android:text="영산강에서 와끼리그로 잡았져염 데헤헷♡♡ 봄이 왔져여 다들 달려염"
                 android:textColor="#000000"
-                android:lineSpacingExtra="5dp"
-                android:textSize="20dp"
+                android:lineSpacingExtra="4dp"
+                android:textSize="15dp"
                 android:textStyle="italic"/>
 
         </LinearLayout>
 
         <LinearLayout
-
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:onClick="tab1_item_like"
+                android:id="@+id/tab1_item_like_submit"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -127,20 +127,20 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="40dp"
+                    android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_like"/>
 
                 <TextView
                     android:id="@+id/tab1_item_likecount"
-                    android:paddingTop="10dp"
+                    android:paddingTop="6dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:text="25"
                     android:textStyle="italic"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     android:textColor="#fa0175"/>
 
             </LinearLayout>
@@ -154,19 +154,19 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="40dp"
+                    android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_ment"/>
 
                 <TextView
                     android:id="@+id/tab1_item_mentcount"
-                    android:paddingTop="10dp"
+                    android:paddingTop="6dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:text="16"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     android:textStyle="italic"
                     android:textColor="#777777"/>
 
@@ -181,7 +181,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="40dp"
+                    android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_location"
                     android:id="@+id/imageView2" />
@@ -189,14 +189,14 @@
                 <TextView
                     android:layout_marginRight="5dp"
                     android:id="@+id/tab1_item_loationstate"
-                    android:paddingTop="10dp"
+                    android:paddingTop="6dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center|left"
                     android:layout_width="55dp"
                     android:layout_height="match_parent"
                     android:text="공개"
                     android:textStyle="italic"
-                   android:textSize="20dp"
+                    android:textSize="16dp"
                     android:textColor="#777777"/>
 
             </LinearLayout>
