--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="25dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -27,13 +27,14 @@
                     android:src="@drawable/icon_sp" />
 
                 <TextView
+                    android:id="@+id/tab1_text_category"
                     android:layout_marginLeft="7dp"
                     android:gravity="center|left"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:text="전체"
-                    android:textStyle="italic"
-                    android:textSize="18dp"
+                    android:textStyle="italic|bold"
+                    android:textSize="15dp"
                     android:textColor="#000000"/>
             </LinearLayout>
 
@@ -58,10 +59,10 @@
                         android:layout_marginRight="8dp"
                         android:layout_marginLeft="5dp"
                         android:gravity="center"
-                        android:layout_width="60dp"
+                        android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:text="글쓰기"
-                        android:textSize="18dp"
+                        android:textSize="15dp"
                         android:textStyle="italic|bold"
                         android:textColor="#ffffff"/>
 
