--- a/app/src/main/res/layout/view_image.xml
+++ b/app/src/main/res/layout/view_image.xml
@@ -18,14 +18,16 @@
                 android:layout_alignParentRight="true"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:background="#959595">
+                android:background="#3f3e3e">
 
                 <TextView
+                    android:layout_marginRight="3dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="닫기"
                     android:textSize="17dp"
-                    android:textColor="#ffffff"
+                    android:textStyle="bold|italic"
+                    android:textColor="#00fff7"
                     android:gravity="center"/>
 
             </LinearLayout>
