--- a/app/src/main/res/layout/item_ment.xml
+++ b/app/src/main/res/layout/item_ment.xml
@@ -33,16 +33,23 @@
                     android:src="@drawable/textimg" />
 
                 <TextView
-                    android:paddingRight="10dp"
                     android:id="@+id/tab1_ment_nickname"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="7dp"
                     android:gravity="center|left"
-                    android:text="닉네임"
+                    android:text="닉네임 "
                     android:textColor="#000000"
                     android:textSize="17dp"
                     android:textStyle="bold|italic" />
+
+                <ImageView
+                    android:layout_marginRight="5dp"
+                    android:id="@+id/tab1_ment_sponsor"
+                    android:layout_width="13dp"
+                    android:layout_height="13dp"
+                    android:layout_gravity="center|left"
+                    android:src="@drawable/icon_vip" />
 
                 <TextView
                     android:paddingRight="7dp"
