--- a/app/src/main/res/layout/item_sponsor.xml
+++ b/app/src/main/res/layout/item_sponsor.xml
@@ -18,6 +18,7 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/tab4_sponsorlist_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="16dp"
@@ -34,6 +35,7 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/tab4_sponsorlist_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="18dp"
@@ -42,13 +44,14 @@
                 android:text="북한산맛탕 "/>
 
             <TextView
+                android:id="@+id/tab4_sponsorlist_money"
                 android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="18dp"
                 android:textColor="@color/colorSora"
                 android:textStyle="bold|italic"
-                android:text="100,000원 후원 "/>
+                android:text="100,000원 후원 " />
 
         </LinearLayout>
 
