--- a/app/src/main/res/layout/tab1_write.xml
+++ b/app/src/main/res/layout/tab1_write.xml
@@ -114,7 +114,7 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
@@ -135,10 +135,13 @@
             android:lineSpacingExtra="3dp"
             android:hint="자랑글을 입력해주세요."
             android:textColorHint="#ffffff"
+            android:overScrollMode="always"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
             android:gravity="top|left"
             android:background="@android:color/transparent"/>
 
-    </ScrollView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_marginLeft="20dp"
