--- a/app/src/main/res/layout/item_tab1.xml
+++ b/app/src/main/res/layout/item_tab1.xml
@@ -20,8 +20,7 @@
             <ImageView
                 android:id="@+id/tab1_item_prfileimg"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/profile_default"/>
+                android:layout_height="40dp"/>
 
 
             <LinearLayout
